style: add z-index property to fix overlay issue

--- a/src/components/Header/MobileBoardConfig/MobileMenuModal.module.scss
+++ b/src/components/Header/MobileBoardConfig/MobileMenuModal.module.scss
@@ -9,6 +9,7 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 0.5s ease;
+  z-index: 3;
 
   menu {
     border-radius: 0.8rem;
